--- a/test-output/old/Test-Suite/classes.html
+++ b/test-output/old/Test-Suite/classes.html
@@ -4,24 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.test.group_test</td>
+<td>com.test.demoTest1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>checkTitle</td>
-<td>demo </td>
-</tr>
+<td>testCase3</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>click_element</td>
-<td>demo </td>
-</tr>
+<td>testCase2</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>starting_point</td>
+<td>testCase1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -30,8 +28,16 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterClass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
