--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceb1df">  <td>21/11/13 09:35:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.RegistrationTest@7a419da4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1064265473</td>   <td></td> </tr>
-<tr bgcolor="778a76">  <td>21/11/13 09:35:51</td>   <td>-2690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration_of_user()[pri:0, instance:com.test.RegistrationTest@7a419da4]">registration_of_user</td> 
-  <td>main@1064265473</td>   <td></td> </tr>
-<tr bgcolor="ceb1df">  <td>21/11/13 09:35:40</td>   <td>-13727</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.RegistrationTest@7a419da4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1064265473</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest1.testCase1()[pri:0, instance:com.test.demoTest1@436e852b]">testCase1</td> 
+  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demoTest1.afterClass()[pri:0, instance:com.test.demoTest1@436e852b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest1.testCase3()[pri:0, instance:com.test.demoTest1@436e852b]">testCase3</td> 
+  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demoTest1.beforeClass()[pri:0, instance:com.test.demoTest1@436e852b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demoTest1.afterClass()[pri:0, instance:com.test.demoTest1@436e852b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demoTest1.afterClass()[pri:0, instance:com.test.demoTest1@436e852b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demoTest1.beforeClass()[pri:0, instance:com.test.demoTest1@436e852b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest1.testCase2()[pri:0, instance:com.test.demoTest1@436e852b]">testCase2</td> 
+  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:42</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demoTest1.beforeClass()[pri:0, instance:com.test.demoTest1@436e852b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
 </table>
