--- a/test-output/old/Test-Suite/methods-alphabetical.html
+++ b/test-output/old/Test-Suite/methods-alphabetical.html
@@ -1,8 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test-Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d26d6b">  <td>21/11/12 10:58:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.checkTitle()[pri:0, instance:com.test.group_test@44821a96]">checkTitle</td> 
-  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="d26d6b">  <td>21/11/12 10:58:18</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.click_element()[pri:0, instance:com.test.group_test@44821a96]">click_element</td> 
-  <td>main@2108763062</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demoTest1.afterClass()[pri:0, instance:com.test.demoTest1@436e852b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demoTest1.afterClass()[pri:0, instance:com.test.demoTest1@436e852b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;demoTest1.afterClass()[pri:0, instance:com.test.demoTest1@436e852b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demoTest1.beforeClass()[pri:0, instance:com.test.demoTest1@436e852b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demoTest1.beforeClass()[pri:0, instance:com.test.demoTest1@436e852b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;demoTest1.beforeClass()[pri:0, instance:com.test.demoTest1@436e852b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>-26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest1.testCase1()[pri:0, instance:com.test.demoTest1@436e852b]">testCase1</td> 
+  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest1.testCase2()[pri:0, instance:com.test.demoTest1@436e852b]">testCase2</td> 
+  <td>main@323326911</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>21/12/11 21:57:17</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="demoTest1.testCase3()[pri:0, instance:com.test.demoTest1@436e852b]">testCase3</td> 
+  <td>main@323326911</td>   <td></td> </tr>
 </table>
