--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="778a76">  <td>21/11/13 09:35:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration_of_user()[pri:0, instance:com.test.RegistrationTest@7a419da4]">registration_of_user</td> 
-  <td>main@1064265473</td>   <td></td> </tr>
-<tr bgcolor="ceb1df">  <td>21/11/13 09:35:40</td>   <td>-11037</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.RegistrationTest@7a419da4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1064265473</td>   <td></td> </tr>
-<tr bgcolor="ceb1df">  <td>21/11/13 09:35:54</td>   <td>2690</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.RegistrationTest@7a419da4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1064265473</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;anotationsExample.afterClass()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;anotationsExample.afterMethod()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:08:02</td>   <td>5080</td> <td title="&lt;&lt;anotationsExample.afterSuite()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;anotationsExample.afterTest()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;anotationsExample.beforeClass()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;anotationsExample.beforeMethod()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-56</td> <td title="&gt;&gt;anotationsExample.beforeSuite()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-48</td> <td>&nbsp;</td><td title="&gt;&gt;anotationsExample.beforeTest()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="anotationsExample.testCase1()[pri:0, instance:com.test.anotationsExample@ed9d034]">testCase1</td> 
+  <td>main@1415157681</td>   <td></td> </tr>
 </table>
