--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;anotationsExample.beforeMethod()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;anotationsExample.afterMethod()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-36</td> <td title="&gt;&gt;anotationsExample.beforeSuite()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;anotationsExample.afterClass()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:08:02</td>   <td>5100</td> <td title="&lt;&lt;anotationsExample.afterSuite()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;anotationsExample.beforeClass()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>24</td> <td>&nbsp;</td><td title="&lt;&lt;anotationsExample.afterTest()[pri:0, instance:com.test.anotationsExample@ed9d034]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="anotationsExample.testCase1()[pri:0, instance:com.test.anotationsExample@ed9d034]">testCase1</td> 
-  <td>main@1415157681</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/21 01:07:57</td>   <td>-28</td> <td>&nbsp;</td><td title="&gt;&gt;anotationsExample.beforeTest()[pri:0, instance:com.test.anotationsExample@ed9d034]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>22/01/22 11:41:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>22/01/22 11:40:56</td>   <td>-18644</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/22 11:41:05</td>   <td>-9195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTestWithData.registration_of_user(java.util.HashMap)[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">registration_of_user</td> 
+  <td>main@1418385211</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>22/01/22 11:40:56</td>   <td>-18671</td> <td title="&gt;&gt;BaseClass.setUpEnv()[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&gt;&gt;setUpEnv</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>22/01/22 11:41:15</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.FailedTestCases(org.testng.ITestResult)[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&lt;&lt;FailedTestCases</td> 
+<td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
 </table>
