--- a/test-output/old/Test-Suite/methods-not-run.html
+++ b/test-output/old/Test-Suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>basic.testng.concepts.tests.group_03.group_test.starting_point</td></tr>
 </table>
