--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="759b6d">  <td>22/01/22 11:41:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.FailedTestCases(org.testng.ITestResult)[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&lt;&lt;FailedTestCases</td> 
-<td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>22/01/22 11:41:05</td>   <td>-9193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTestWithData.registration_of_user(java.util.HashMap)[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">registration_of_user</td> 
-  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>22/01/22 11:40:56</td>   <td>-18642</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>22/01/22 11:40:56</td>   <td>-18669</td> <td title="&gt;&gt;BaseClass.setUpEnv()[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&gt;&gt;setUpEnv</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="759b6d">  <td>22/01/22 11:41:15</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.RegistrationTestWithData@4eb7f003]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/24 10:27:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.checkTitle()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@51e2adc7]">checkTitle</td> 
+  <td>main@266437232</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/24 10:27:04</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.click_element()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@51e2adc7]">click_element</td> 
+  <td>main@266437232</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>22/01/24 10:27:04</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.starting_point()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@51e2adc7]">starting_point</td> 
+  <td>main@266437232</td>   <td></td> </tr>
 </table>
