--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Test-Suite</th></tr>
-<tr><td><a href="#t0">MyTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">63</td><td>demo</td><td></td></tr>
+<tr><td><a href="#t0">MyTests</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,947</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test-Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">basic.testng.concepts.tests.group_03.group_test</td><td><a href="#m0">checkTitle</a></td><td rowspan="1">1643000284473</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m1">click_element</a></td><td rowspan="1">1643000284488</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test-Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyTests &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.test.RegistrationTest</td><td><a href="#m0">registration_of_user</a></td><td rowspan="1">1643086720689</td><td rowspan="1">6961</td></tr><tr class="passedodd"><td rowspan="1">com.test.ReservationTest</td><td><a href="#m1">reservation_of_user</a></td><td rowspan="1">1643086735164</td><td rowspan="1">7696</td></tr></tbody>
 </table>
-<h2>MyTest</h2><h3 id="m0">basic.testng.concepts.tests.group_03.group_test#checkTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">basic.testng.concepts.tests.group_03.group_test#click_element</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>MyTests</h2><h3 id="m0">com.test.RegistrationTest#registration_of_user</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.test.ReservationTest#reservation_of_user</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
