--- a/test-output/old/Test-Suite/groups.html
+++ b/test-output/old/Test-Suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>group_test.checkTitle()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@3234e239]<br/></td></tr>
-<tr><td>demo</td><td>group_test.click_element()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@3234e239]<br/>group_test.checkTitle()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@3234e239]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
