--- a/test-output/old/Test-Suite/methods.html
+++ b/test-output/old/Test-Suite/methods.html
@@ -1,8 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test-Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ba398">  <td>22/01/24 10:28:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.click_element()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@3234e239]">click_element</td> 
-  <td>main@17037394</td>   <td></td> </tr>
-<tr bgcolor="9ba398">  <td>22/01/24 10:28:04</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="group_test.checkTitle()[pri:0, instance:basic.testng.concepts.tests.group_03.group_test@3234e239]">checkTitle</td> 
-  <td>main@17037394</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:28:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.RegistrationTest@4d3167f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:28:47</td>   <td>16734</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.test.ReservationTest@1060b431]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:29:02</td>   <td>31836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.ReservationTest@1060b431]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:28:47</td>   <td>16626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.FailedTestCases(org.testng.ITestResult)[pri:0, instance:com.test.RegistrationTest@4d3167f4]">&lt;&lt;FailedTestCases</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:28:30</td>   <td>-33</td> <td title="&gt;&gt;BaseClass.setUpEnv()[pri:0, instance:com.test.RegistrationTest@4d3167f4]">&gt;&gt;setUpEnv</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>22/01/25 10:28:55</td>   <td>24134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReservationTest.reservation_of_user()[pri:0, instance:com.test.ReservationTest@1060b431]">reservation_of_user</td> 
+  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:28:47</td>   <td>16629</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.test.RegistrationTest@4d3167f4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="96e971">  <td>22/01/25 10:29:02</td>   <td>31834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.FailedTestCases(org.testng.ITestResult)[pri:0, instance:com.test.ReservationTest@1060b431]">&lt;&lt;FailedTestCases</td> 
+<td>&nbsp;</td>  <td>main@1415157681</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>22/01/25 10:28:40</td>   <td>9659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registration_of_user()[pri:0, instance:com.test.RegistrationTest@4d3167f4]">registration_of_user</td> 
+  <td>main@1415157681</td>   <td></td> </tr>
 </table>
